# whois

./: .editorconfig  .gitignore  Makefile  Makefile.am  README  README.win32  TODO  as32_del.h  as32_del_list  as_del_list  config.h  data.h  ip6_del_list  ip_del_list  ip_del_recovered.h  make_as32_del.pl  make_as_del.pl  make_ip6_del.pl  make_ip_del.pl  make_ip_del_recovered.pl  make_new_gtlds.pl  make_nic_handles.pl  make_servers_charset.pl  make_tld_serv.pl  make_version_h.pl  mkpasswd.1  mkpasswd.bash  mkpasswd.c  new_gtlds_list  nic_handles_list  ripe-mail  servers_charset.h  servers_charset_list  simple_recode.c  simple_recode.h  test-whois.pl  tld_serv_list  utils.c  utils.h  whois-4.6.6-gentoo-security.patch  (+7 more)
.github/workflows/: create-release-from-tag.yml  release.yml
debian/: changelog  changelog.old  control  copyright  rules  salsa-ci.yml  whois.manpages
po/: Makefile  cs.po  da.po  de.po  el.po  es.po  eu.po  fi.po  fr.po  it.po  it.po~  ja.po  ka.po  nb.po  no.po  pl.po  pt_BR.po  ru.po  tr.po  zh_CN.po
whois-4.7.14/: tld_serv_list
